--- a/themes/shadow/public/main.css
+++ b/themes/shadow/public/main.css
@@ -599,6 +599,9 @@ input, select, textarea {
 .topic_list .lastReplyAt {
 	white-space: nowrap;
 }
+.topic_list .lastReplyAt:before {
+	content: "Last: ";
+}
 .topic_list .starter:before {
 	content: "Starter: ";
 }
