--- a/themes/tempra-conflux/public/main.css
+++ b/themes/tempra-conflux/public/main.css
@@ -405,6 +405,9 @@ li a {
 .topic_list .lastReplyAt {
 	white-space: nowrap;
 }
+.topic_list .lastReplyAt:before {
+	content: "Last: ";
+}
 .topic_list .starter:before {
 	content: "Starter: ";
 }
