--- a/themes/tempra-cursive/public/main.css
+++ b/themes/tempra-cursive/public/main.css
@@ -158,25 +158,6 @@ li a {
 	padding-left: 58px;
 }
 
-.colblock_left {
-	border: 1px solid #ccc;
-	padding: 0px;
-	padding-top: 0px;
-	width: 30%;
-	float: left;
-	margin-right: 8px;
-}
-.colblock_right {
-	border: 1px solid #ccc;
-	padding: 0px;
-	padding-top: 0px;
-	width: 65%;
-	overflow: hidden;
-	word-wrap: break-word;
-}
-.colblock_left:empty, .colblock_right:empty { display: none; }
-
-/* The new method of doing columns layouts, colblock is now deprecated :( */
 .colstack_left {
 	float: left;
 	width: 30%;
@@ -197,7 +178,9 @@ li a {
 	word-wrap: break-word;
 }
 .colstack_head { margin-bottom: 0px; }
-.colstack_left:empty, .colstack_right:empty { display: none; }
+.colstack_left:empty, .colstack_right:empty {
+	display: none;
+}
 
 .colstack_grid {
 	display: grid;
@@ -304,7 +287,9 @@ li a {
 	margin: 0 auto;
 	float: none;
 }
-.formitem:not(:only-child) input, .formitem:not(:only-child) select { padding: 3px;/*5px;*/ }
+.formitem:not(:only-child) input, .formitem:not(:only-child) select {
+	padding: 3px;/*5px;*/
+}
 .formitem:not(:only-child).formlabel {
 	padding-top: 15px;/*18px;*/
 	padding-bottom: 12px;/*16px;*/
@@ -322,6 +307,17 @@ li a {
 button {
 	background: white;
 	border: 1px solid #8e8e8e;
+}
+
+/* TODO: Add the avatars to the forum list */
+.extra_little_row_avatar {
+	display: none;
+}
+.shift_left {
+	float: left;
+}
+.shift_right {
+	float: right;
 }
 
 /* Topics */
@@ -483,8 +479,13 @@ button.username {
 	border: none;
 }
 
-.mention { font-weight: bold; }
-.show_on_edit { display: none; }
+.mention {
+	font-weight: bold;
+}
+.show_on_edit, .auto_hide {
+	display: none;
+}
+
 .alert {
 	display: block;
 	padding: 5px;
@@ -619,10 +620,20 @@ button.username {
 		top: 33px;
 	}
 
-	.hide_on_mobile { display: none; }
-	.prev_button, .next_button { top: auto; bottom: 5px; }
-	.colstack_grid { grid-template-columns: none; grid-gap: 8px; }
-	.grid_istat { margin-bottom: 0px; }
+	.hide_on_mobile {
+		display: none;
+	}
+	.prev_button, .next_button {
+		top: auto;
+		bottom: 5px;
+	}
+	.colstack_grid {
+		grid-template-columns: none;
+		grid-gap: 8px;
+	}
+	.grid_istat {
+		margin-bottom: 0px;
+	}
 }
 
 @media (max-width: 350px) {
