Refactored the GroupStore to make it more thread-safe. Refactored the store initialisers to better propogate errors upwards. Moved the user initialisation logic to a method on *User. Added the Reload and GlobalCount methods to the GroupStore. Added the CacheSet method to the GroupCache.
Renamed plugin_socialgroups to plugin_guilds 3/3

--- a/templates/guilds_create_guild.html
+++ b/templates/guilds_create_guild.html
@@ -2,12 +2,12 @@
 <main>
 
 <div class="rowblock rowhead">
-	<div class="rowitem"><h1>Create Group</h1></div>
+	<div class="rowitem"><h1>Create Guild</h1></div>
 </div>
 <div class="rowblock">
-	<form action="/group/create/submit/" method="post">
+	<form action="/guild/create/submit/" method="post">
 		<div class="formrow">
-			<div class="formitem formlabel"><a>Group Name</a></div>
+			<div class="formitem formlabel"><a>Guild Name</a></div>
 			<div class="formitem"><input name="group_name" type="text" placeholder="Group Name" /></div>
 		</div>
 		<div class="formrow">
@@ -25,7 +25,7 @@
 				</div>
 		</div>
 		<div class="formrow">
-			<div class="formitem"><button name="group_button" class="formbutton">Create Group</button></div>
+			<div class="formitem"><button name="group_button" class="formbutton">Create Guild</button></div>
 		</div>
 	</form>
 </div>
