--- a/templates/guilds_member_list.html
+++ b/templates/guilds_member_list.html
@@ -1,19 +1,20 @@
 {{template "header.html" . }}
-{{/** TODO: Move this into a CSS file **/}}
-{{template "socialgroups_css.html" . }}
+{{/** TODO: Move this into a per-theme CSS file **/}}
+{{template "guilds_css.html" . }}
 
+{{/** TODO: Add <link> next / prev bits **/}}
 {{/** TODO: Port the page template functions to the template interpreter **/}}
-{{if gt .Page 1}}<div id="prevFloat" class="prev_button"><a class="prev_link" href="/group/members/{{.SocialGroup.ID}}?page={{subtract .Page 1}}">&lt;</a></div>{{end}}
-{{if ne .LastPage .Page}}<link rel="prerender" href="/group/members/{{.SocialGroup.ID}}?page={{add .Page 1}}" />
-<div id="nextFloat" class="next_button"><a class="next_link" href="/group/members/{{.SocialGroup.ID}}?page={{add .Page 1}}">&gt;</a></div>{{end}}
+{{if gt .Page 1}}<div id="prevFloat" class="prev_button"><a class="prev_link" href="/guild/members/{{.Guild.ID}}?page={{subtract .Page 1}}">&lt;</a></div>{{end}}
+{{if ne .LastPage .Page}}<link rel="prerender" href="/guild/members/{{.Guild.ID}}?page={{add .Page 1}}" />
+<div id="nextFloat" class="next_button"><a class="next_link" href="/guild/members/{{.Guild.ID}}?page={{add .Page 1}}">&gt;</a></div>{{end}}
 
 <div class="sgBackdrop">
 	<nav class="miniMenu">
-		<div class="menuItem"><a href="/group/{{.SocialGroup.ID}}">{{.SocialGroup.Name}}</a></div>
+		<div class="menuItem"><a href="/guild/{{.Guild.ID}}">{{.Guild.Name}}</a></div>
 		<div class="menuItem"><a href="#">About</a></div>
-		<div class="menuItem"><a href="/group/members/{{.SocialGroup.ID}}">Members</a></div>
+		<div class="menuItem"><a href="/guild/members/{{.Guild.ID}}">Members</a></div>
 		<div class="menuItem rightMenu"><a href="#">Edit</a></div>
-		<div class="menuItem rightMenu"><a href="/group/join/{{.SocialGroup.ID}}">Join</a></div>
+		<div class="menuItem rightMenu"><a href="/guild/join/{{.Guild.ID}}">Join</a></div>
 	</nav>
 	<div style="clear: both;"></div>
 </div>
@@ -25,7 +26,7 @@
 		</span>
 		<span>
 			<a class="rowtopic" href="{{.Link}}">{{.User.Name}}</a>
-      {{/** Use this for badges instead of rank? Both? Group Titles? **/}}
+      {{/** Use this for badges instead of rank? Both? Guild Titles? **/}}
 			<br /><span class="rowsmall postCount">{{.PostCount}} posts</span>
 		</span>
 	</div>
