--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,7 @@
 {{template "header.html" . }}
 
+<div id="profile_container">
+
 <div id="profile_left_lane" class="colstack_left">
 	<!--<header class="colstack_item colstack_head rowhead">
 		<div class="rowitem"><h1>Profile</h1></div>
@@ -96,6 +98,8 @@
 		</div>
 	</form>
 {{end}}
+</div>
+
 </div>
 
 {{/** Quick subpage switcher **/}}
