--- a/themes/tempra-conflux/public/main.css
+++ b/themes/tempra-conflux/public/main.css
@@ -703,6 +703,7 @@ button.username {
 #profile_left_lane .avatarRow {
 	overflow: hidden;
 	max-height: 220px;
+	padding: 0;
 }
 #profile_left_lane .avatar {
 	width: 100%;
